trunk/Archive2/04/f20783e9a31ecb/output
main.cpp: In member function 'size_t boost::hash<Element>::operator()(const Element&) const':
main.cpp:11:72: error: invalid use of incomplete type 'const struct Element'
         size_t operator()(Element const& e) const { return hash_value(e.key); }
                                                                        ^
main.cpp:7:8: error: forward declaration of 'const struct Element'
 struct Element;
        ^
main.cpp:11:79: warning: control reaches end of non-void function [-Wreturn-type]
         size_t operator()(Element const& e) const { return hash_value(e.key); }
                                                                               ^
